fix issue where nav bar icons were not showing up on netlify

--- a/packages/nouns-webapp/src/components/NavBarButton/NavBarButton.module.css
+++ b/packages/nouns-webapp/src/components/NavBarButton/NavBarButton.module.css
@@ -25,7 +25,7 @@
 
 .icon>svg {
   max-height: 14px;
-  opacity: 50%;
+  opacity: 0.50;
 }
 
 @media (max-width: 992px) {
